# learning-rust-zero2prod

./: .env  Cargo.toml  README.md  docker-compose.yml  example_projects.md  readme.md
.cargo/: config.toml
scripts/: init_db.sh
src/: configuration.rs  gibberish.rs  lib.rs  main.rs  startup.rs  telemetry.rs  telemtry.rs
src/routes/: health_check.rs  subscriptions.rs
src/utils/: env.rs
tests/: health_check.rs  setup.rs
tests/tests_setup/: main.rs  mod.rs  test_app.rs
