[package]
authors = ["superjose"]
edition = "2021"
name = "zero2prod"
version = "0.1.0"

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
async-std = { version = "1.5", features = ["attributes"] }
reqwest = "0.11.11"
rstest = "0.14.0"
serde = { version = "1.0.137", features = ["derive"] }
tokio = "1.19.2"
urlencoding = "2.1.0"
config = "0.13.1"
uuid = { version = "1.1.2", features = ["v4"] }
chrono = "0.4.19"
futures = "0.3.21"
smol = "1.2.5"
log = "0.4.17"
env_logger = "0.9.0"
dotenv = "0.15.0"
tracing = { version = "0.1.36", features = ["log"] }
tracing-subscriber = { version = "0.3.15", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.3"
tracing-log = "0.1.3"

[dependencies.sqlx]
version = "0.6.0"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]
[target.x86_64-pc-windows-gnu]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
name = "zero2prod"
path = "src/main.rs"


[profile.dev.build-override]
opt-level = 3
codegen-units = 1
